@@ -42,10 +42,6 @@ $(function () {
     });
   }
 
-  if ($('body').length > 0) {
-      $('select').material_select()
-  }
-
   $(".caret").each(function(idx) {
     $($(".caret")[idx]).html('')
   })
