@@ -1,0 +1,8 @@
+
+$(document).ready(function() {
+
+  if ($('body').length > 0) {
+    $('select').material_select()
+  }
+
+})
