@@ -1,0 +1,10 @@
+
+.manager-leads-index {
+  th.company-url {
+    width: 10px;
+  }
+  th.created-at,
+  td.created-at {
+    width: 200px;
+  }
+}
